--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HOST= 
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
+HOST= sql3.freesqldatabase.com
+DATABASE_NAME=sql3805058
+DATABASE_USER=sql3805058
+DATABASE_PASSWORD=wBhIUnhTBQ
 PORT_NUMBER=3306
